# obsid

./: .gitignore  README.md  almide.toml
.almide/cache/: _tmp_test_bytes_le_almd.hash
.github/workflows/: pages.yml
docs/: native-host.md  strategy.md
examples/: README.md  canvas-demo.almd  checker.almd  cube.almd  sphere.almd  torus.almd  triangle.almd
host/: index.html  obsid-gl.js  obsid.js
host/browser/: canvas-demo.html  canvas.js  index.html  obsid.js  webgl-demo.html  webgl.js
host/native/: Cargo.toml  README.md
host/native/src/: gpu.rs  lib.rs  main.rs  run.rs  runtime.rs  shaders.wgsl
src/: canvas.almd  main.almd  mod.almd  webgl.almd
